--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -268,3 +268,16 @@ iframe#youmax-video {
         margin-bottom: 0;
     }
 }
+
+.idome:not(#TableOfContents .idome) {
+    background-color: #2E323D;
+    color: white;
+    padding: 3px;
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    display: inline-block;
+    padding-top: 6px;
+    font-weight: bold;
+}
